src/main/kotlin/org/example/sodam/global/error/ErrorResponse.kt
package org.example.sodam.global.error

data class ErrorResponse(
    val status: Int,
    val message: String?
)
